Task-8: Add Producer with Kafka for CUD
