# swagger/api.swagger.json
@@ -146,6 +146,131 @@
         ]
       }
     },
+    "/v1/journeys/task": {
+      "post": {
+        "operationId": "JourneyApiV1_CreateJourneyTaskV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiCreateJourneyTaskRequestV1"
+            }
+          }
+        ],
+        "tags": [
+          "JourneyApiV1"
+        ]
+      },
+      "put": {
+        "operationId": "JourneyApiV1_UpdateJourneyTaskV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiUpdateJourneyTaskRequestV1"
+            }
+          }
+        ],
+        "tags": [
+          "JourneyApiV1"
+        ]
+      }
+    },
+    "/v1/journeys/task/multi": {
+      "post": {
+        "operationId": "JourneyApiV1_MultiCreateJourneyTaskV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiMultiCreateJourneyTaskRequestV1"
+            }
+          }
+        ],
+        "tags": [
+          "JourneyApiV1"
+        ]
+      }
+    },
+    "/v1/journeys/task/{journeyId}": {
+      "delete": {
+        "operationId": "JourneyApiV1_RemoveJourneyTaskV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "journeyId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "JourneyApiV1"
+        ]
+      }
+    },
     "/v1/journeys/{journeyId}": {
       "get": {
         "operationId": "JourneyApiV1_DescribeJourneyV1",
@@ -240,6 +365,29 @@
         }
       }
     },
+    "apiCreateJourneyTaskRequestV1": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "address": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "startTime": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "endTime": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "apiDescribeJourneyResponseV1": {
       "type": "object",
       "properties": {
@@ -309,7 +457,26 @@
         }
       }
     },
+    "apiMultiCreateJourneyTaskRequestV1": {
+      "type": "object",
+      "properties": {
+        "journeys": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiCreateJourneyRequestV1"
+          }
+        }
+      }
+    },
     "apiUpdateJourneyRequestV1": {
+      "type": "object",
+      "properties": {
+        "journey": {
+          "$ref": "#/definitions/apiJourney"
+        }
+      }
+    },
+    "apiUpdateJourneyTaskRequestV1": {
       "type": "object",
       "properties": {
         "journey": {
